bug: add LIBBPFGO_OSRELEASE_FILE to falcosidekiq
Add missing env var to falcosidekiq k8s deployment

Signed-off-by: Jose Donizetti <jdbjunior@gmail.com>

--- a/deploy/kubernetes/tracee-falcosidekick/tracee.yaml
+++ b/deploy/kubernetes/tracee-falcosidekick/tracee.yaml
@@ -21,6 +21,9 @@ spec:
         imagePullPolicy: IfNotPresent
         args:
           - --webhook http://tracee-webhook:2801 --webhook-template ./templates/falcosidekick.tmpl --webhook-content-type application/json
+        env:
+          - name: LIBBPFGO_OSRELEASE_FILE
+            value: /etc/os-release-host
         name: tracee
         securityContext:
           privileged: true
