--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -9,6 +9,7 @@ env:
   GO_VERSION: "1.18"
   OPA_VERSION: "v0.41.0"
   TESTS: "TRC-102 TRC-103 TRC-104 TRC-105 TRC-107 TRC-1018 TRC-1014 TRC-1016 TRC-1010"
+  NETTESTS: "IPv4 IPv6 TCP UDP ICMP ICMPv6"
 jobs:
   VERIFY-CODE:
     name: Verify Code
@@ -129,6 +130,9 @@ jobs:
       - name: "CORE"
         run: |
           DONTSLEEP=0 ISNONCORE=0 ./tests/kerneltest.sh
+      - name: "NETWORK"
+        run: |
+          DONTSLEEP=0 ISNONCORE=0 ./tests/e2e-net-test.sh
   NONCORE:
     needs:
       - ANALYZE-CODE
@@ -146,3 +150,6 @@ jobs:
       - name: "NONCORE"
         run: |
           DONTSLEEP=0 ISNONCORE=1 ./tests/kerneltest.sh
+      - name: "NETWORK"
+        run: |
+          DONTSLEEP=0 ISNONCORE=1 ./tests/e2e-net-test.sh
