--- a/.github/workflows/publish-helm.yaml
+++ b/.github/workflows/publish-helm.yaml
@@ -37,7 +37,7 @@ jobs:
         id: lint
         uses: helm/chart-testing-action@dae259e86a35ff09145c0805e2d7dd3f7207064a
       - name: Run chart-testing
-        run: ct lint-and-install --validate-maintainers=false --charts deploy/helm
+        run: ct lint-and-install --validate-maintainers=false --charts ${{ env.CHART_DIR }}
       - name: Install chart-releaser
         run: |
           wget https://github.com/helm/chart-releaser/releases/download/v1.3.0/chart-releaser_1.3.0_linux_amd64.tar.gz
