--- a/.github/workflows/publish-helm.yaml
+++ b/.github/workflows/publish-helm.yaml
@@ -15,6 +15,8 @@ env:
   HELM_REP: helm-charts
   GH_OWNER: aquasecurity
   CHART_DIR: deploy/helm/tracee
+  KIND_VERSION: "v0.14.0"
+  KIND_IMAGE: "kindest/node:v1.23.6@sha256:b1fa224cc6c7ff32455e0b1fd9cbfd3d3bc87ecaa8fcb06961ed1afb3db0f9ae"
 
 jobs:
   publish:
@@ -39,6 +41,11 @@ jobs:
       - name: Setup Chart Linting
         id: lint
         uses: helm/chart-testing-action@dae259e86a35ff09145c0805e2d7dd3f7207064a
+      - name: Setup Kubernetes cluster (KIND)
+        uses: helm/kind-action@9e8295d178de23cbfbd8fa16cf844eec1d773a07  # v1.2.0
+        with:
+          version: ${{ env.KIND_VERSION }}
+          image: ${{ env.KIND_IMAGE }}
       - name: Run chart-testing
         run: ct lint-and-install --validate-maintainers=false --charts ${{ env.CHART_DIR }}
       - name: Install chart-releaser
