--- a/deploy/helm/tracee/values.yaml
+++ b/deploy/helm/tracee/values.yaml
@@ -57,7 +57,7 @@ affinity: {}
 postee:
   # enabled is a flag to install Postee subchart and configure Tracee to forward
   # threat detections to the Postee webhook endpoint.
-  enabled: true
+  enabled: false
 
 signatures:
   # config defines Common Expression Language (CEL) signatures that are loaded
