--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,6 +9,8 @@ edit_uri: ""
 nav:
   - Getting Started: 
     - Overview: index.md
+    - Kubernetes - Quick Start: getting-started/kubernetes-quickstart.md
+    - Docker - Quick Start: getting-started/docker-quickstart.md
     - Installation:
       - Getting Tracee: getting-started/installing/getting.md
       - Prerequisites: getting-started/installing/prerequisites.md
@@ -19,7 +21,6 @@ nav:
         - Fedora: getting-started/installing/distros/fedora.md
         - NixOS: getting-started/installing/distros/nix-nixos.md
       - Linux Headers: getting-started/installing/headers.md
-    - Quick Start: getting-started/quick-start.md
   - Tutorials:
     - Setup Development Machine with Vagrant: tutorials/setup-development-machine-with-vagrant.md
     - Deploy Tracee Grafana Dashboard: tutorials/deploy-grafana-dashboard.md
