--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -8,7 +8,7 @@ on:
 env:
   GO_VERSION: "1.17"
   OPA_VERSION: "v0.41.0"
-  TESTS: "TRC-102 TRC-103 TRC-104 TRC-105 TRC-107 TRC-1022 TRC-1018 TRC-1014 TRC-1016 TRC-1010"
+  TESTS: "TRC-102 TRC-103 TRC-104 TRC-105 TRC-107 TRC-1018 TRC-1014 TRC-1016 TRC-1010"
 jobs:
   VERIFY-CODE:
     name: Verify Code
