tracee: add flag to install new tracee

--- a/deploy/helm/tracee/templates/daemonset.yaml
+++ b/deploy/helm/tracee/templates/daemonset.yaml
@@ -30,6 +30,14 @@ spec:
         - name: tracee
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          {{- if .Values.everythingIsAnEvent }}
+          command: ["/tracee/tracee"]
+          args:
+            - --output
+            - json
+            - --trace
+            - event={{ .Values.events }}
+          {{- end }}
           {{- if .Values.postee.enabled }}
           args:
             - --webhook=http://{{ include "tracee.fullname" . }}-postee:8082
