--- a/builder/Dockerfile.alpine-tracee-make
+++ b/builder/Dockerfile.alpine-tracee-make
@@ -6,7 +6,7 @@
 #
 ################################################################################
 
-FROM alpine:3.16
+FROM alpine:3.17
 
 ARG uid=1000
 ARG gid=1000
@@ -18,12 +18,21 @@ RUN apk --no-cache update && \
     apk --no-cache add bash git curl rsync && \
     apk --no-cache add musl-dev libc6-compat && \
     apk --no-cache add llvm clang go make gcc && \
+    apk --no-cache add clang-extra-tools && \
     apk --no-cache add linux-headers && \
     apk --no-cache add elfutils-dev && \
     apk --no-cache add libelf-static && \
     apk --no-cache add zlib-static && \
-    curl -L -o /usr/bin/opa https://github.com/open-policy-agent/opa/releases/download/v0.44.0/opa_linux_amd64_static && \
+    curl -L -o /usr/bin/opa https://github.com/open-policy-agent/opa/releases/download/v0.48.0/opa_linux_amd64_static && \
     chmod 755 /usr/bin/opa
+
+# extra tools for testing things
+
+RUN apk --no-cache add man-pages man-pages-posix bash-completion vim && \
+    apk --no-cache add iproute2 vlan bridge-utils net-tools && \
+    apk --no-cache add netcat-openbsd iputils && \
+    apk --no-cache add wget lynx w3m && \
+    apk --no-cache add stress-ng
 
 # allow TRACEE* and LIBBPFGO* environment variables through sudo
 
@@ -43,6 +52,7 @@ RUN export uid=$uid gid=$gid && \
     chown ${uid}:${gid} -R /home/tracee && \
     echo "export PS1=\"\u@\h[\w]$ \"" > /home/tracee/.bashrc && \
     echo "alias ls=\"ls --color\"" >> /home/tracee/.bashrc && \
+    echo "set -o vi" >> /home/tracee/.bashrc && \
     ln -s /home/tracee/.bashrc /home/tracee/.profile
 
 USER tracee
