tool: add goimports-reviser
goimports-reviser fix go imports formatting by groups.

--- a/.github/actions/build-dependencies/action.yaml
+++ b/.github/actions/build-dependencies/action.yaml
@@ -45,6 +45,10 @@ runs:
       run: |
         go install github.com/kisielk/errcheck@latest
       shell: bash
+    - name: Install goimports-reviser
+      run: |
+        go install github.com/incu6us/goimports-reviser/v3@latest
+      shell: bash
     - name: Install docker
       run: |
         sudo apt-get install --yes ca-certificates curl gnupg lsb-release
