--- a/builder/Makefile.release
+++ b/builder/Makefile.release
@@ -26,6 +26,7 @@ CMD_GIT ?= git
 CMD_RM ?= rm
 CMD_TOUCH ?= touch
 CMD_MKDIR ?= mkdir
+CMD_COSIGN ?= cosign
 
 .ONESHELL:
 .check_%:
@@ -181,8 +182,12 @@ ifneq ("$(SNAPSHOT)", "1")
 	# push container images to docker hub
 	#
 	$(CMD_DOCKER) push $(PUSH_DOCKER_REPO):latest
+
+	COSIGN_EXPERIMENTAL=1 $(CMD_COSIGN) sign $(PUSH_DOCKER_REPO)@$(shell docker inspect --format='{{index .RepoDigests 0}}' $(PUSH_DOCKER_REPO):latest | awk -F'@' '{print $2}')
 	$(CMD_DOCKER) push $(PUSH_DOCKER_REPO):$(IMAGE_TAG)
+	COSIGN_EXPERIMENTAL=1 $(CMD_COSIGN) sign $(PUSH_DOCKER_REPO)@$(shell docker inspect --format='{{index .RepoDigests 0}}' $(PUSH_DOCKER_REPO):full | awk -F'@' '{print $2}')
 	$(CMD_DOCKER) push $(PUSH_DOCKER_REPO):full
+	
 	$(CMD_DOCKER) push $(PUSH_DOCKER_REPO):full-$(IMAGE_TAG)
 	#
 	# create release notes
