tests: use HTTP e2e test

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -9,7 +9,7 @@ env:
   GO_VERSION: "1.18"
   OPA_VERSION: "v0.41.0"
   TESTS: "TRC-102 TRC-103 TRC-104 TRC-105 TRC-107 TRC-1018 TRC-1014 TRC-1016 TRC-1010"
-  NETTESTS: "IPv4 IPv6 TCP UDP ICMP ICMPv6 DNS"
+  NETTESTS: "IPv4 IPv6 TCP UDP ICMP ICMPv6 DNS HTTP"
 jobs:
   VERIFY-CODE:
     name: Verify Code
