--- a/packaging/Dockerfile.ubuntu-packaging
+++ b/packaging/Dockerfile.ubuntu-packaging
@@ -57,17 +57,20 @@ RUN export uid=$uid gid=$gid && \
 
 RUN export DEBIAN_FRONTEND=noninteractive && \
     grep -Eq "UBUNTU_CODENAME=(bionic|focal)" /etc/os-release && \
-    add-apt-repository -y ppa:longsleep/golang-backports && \
     apt-get update && \
-    apt-get install -y golang-1.18-go && \
-    update-alternatives --install /usr/bin/go go /usr/lib/go-1.18/bin/go 1 && \
-    update-alternatives --install /usr/bin/gofmt gofmt /usr/lib/go-1.18/bin/gofmt 1 && \
+    curl -L -o /tmp/golang.tar.xz https://go.dev/dl/go1.19.5.linux-amd64.tar.gz && \
+    tar -C /usr/local -xzf /tmp/golang.tar.xz && \
+    echo "export GOROOT=/usr/local/go" >> /home/tracee/.bashrc && \
+    echo "export GOPATH=/home/tracee/go" >> /home/tracee/.bashrc && \
+    echo "export PATH=/home/tracee/go/bin:/usr/local/go/bin:$PATH" >> /home/tracee/.bashrc && \
+    update-alternatives --install /usr/bin/go go /usr/local/go/bin/go 1 && \
+    update-alternatives --install /usr/bin/gofmt gofmt /usr/local/go/bin/gofmt 1 && \
     curl -L -o /llvm.sh https://apt.llvm.org/llvm.sh && \
     chmod 755 /llvm.sh && \
-    /llvm.sh 13 && \
+    /llvm.sh 14 && \
     rm /llvm.sh && \
-    update-alternatives --install /usr/bin/llc llc /usr/bin/llc-13 1 && \
-    update-alternatives --install /usr/bin/clang clang /usr/bin/clang-13 1 || true
+    update-alternatives --install /usr/bin/llc llc /usr/bin/llc-14 1 && \
+    update-alternatives --install /usr/bin/clang clang /usr/bin/clang-14 1 || true
 
 USER tracee
 ENV HOME /home/tracee
