--- a/.github/workflows/test-daily.yaml
+++ b/.github/workflows/test-daily.yaml
@@ -7,24 +7,17 @@ on:
     - cron: '0 3 * * *'
   workflow_call:
 
-env:
-  GO_VERSION: "1.18"
-  OPA_VERSION: "v0.41.0"
-
 jobs:
   compile-tracee:
     name: Test Latest libbpfgo
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout Code
         uses: actions/checkout@v2
         with:
           submodules: true
       - name: Install Dependencies
         uses: ./.github/actions/build-dependencies
-        with:
-          go-version: ${{ env.GO_VERSION }}
-          opa-version: ${{ env.OPA_VERSION }}
       - name: Compile Tracee
         run: |
           make test-upstream-libbpfgo
