chore: make integration tests more robust
- Add generic functions to check received events in different manners:
  - ExpectAllInOrder
  - ExpectAllEqualTo
  - ExpectAtLeastOneOfEach
  - ExpectAnyOfEach
- Add waitForTraceeOutputEvents function to wait for tracee output
  events until buffer fills with certain number of events or
  timeout occurs.
- Add waitforTraceeStop function to wait for tracee to stop or until
  timeout occurs.
- Remove tester.sh concentrating all event filter tests in
  event_filters_test.go.
- Create syscaller tool to easily generate syscalls from the command
  line (strictly for integration tests). It reuses the tracee events
  package.
- Fix goroutine leaks, deadlocks and race conditions.

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ compile_commands.json
 
 # binaries and build files
 dist
+tests/integration/syscaller/cmd/syscaller
 
 # release files
 release_notes.txt
